# image_processor

./: AbstractFilter.cpp  AbstractFilter.h  BMPHandler.cpp  BMPHandler.h  CMakeLists.txt  ChannelWiseFilter.cpp  ChannelWiseFilter.h  CompositeFilter.cpp  CompositeFilter.h  ConvFilter.cpp  ConvFilter.h  CropFilter.cpp  CropFilter.h  CrystallizeFilter.cpp  CrystallizeFilter.h  EdgeFilter.cpp  EdgeFilter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  Image.cpp  Image.h  NegativeFilter.cpp  NegativeFilter.h  Parser.cpp  Parser.h  SharpeningFilter.cpp  SharpeningFilter.h  ThresholdFilter.cpp  ThresholdFilter.h  image_processor.cpp
